# txqr

python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/pytxqr/: __init__.py  bench.py  cli.py  colorcode.py  fountain.py  protocol.py  qr.py
python/tests/: test_pytxqr.py
