[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytxqr"
version = "0.1.0"
description = "Transfer data via animated QR codes (pure-Python TXQR port)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "qrcode>=7.0",
    "pillow>=9.0",
    "numpy>=1.20",
    "opencv-python-headless>=4.5",
]

[project.scripts]
pytxqr = "pytxqr.cli:main"

[tool.setuptools.packages.find]
include = ["pytxqr*"]
